// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Evalueando componente <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategorie={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="naruto"
      key="naruto"
    />
    <GifGrid
      category="One punch"
      key="One punch"
    />
  </ol>
</Fragment>
`;

exports[`Evalueando componente <GifExpertApp /> deberia renderizar bien los componentes 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategorie={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
